--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,15 +41,21 @@ dependencies {
     def camerax_version = "1.1.0-beta01"
     def zxing_version = "4.3.0"
 
+    def junit_version = "4.13.2"
+    def junit_ext_version = "1.1.5"
+    def runner_version = "1.1.0"
+    def hamcrest_version = "1.3"
+    def espresso_version = "3.2.0"
+    def fragment_version = "1.5.5"
+    def mockito_version = "2.28.2"
+    def mockk_version = "1.13.9"
+
     implementation project(':ds')
     implementation project(':sdk')
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "io.insert-koin:koin-android:3.4.2"
 
     // Kotlin
@@ -67,4 +73,23 @@ dependencies {
     implementation "androidx.camera:camera-extensions:${camerax_version}"
 
     implementation "com.journeyapps:zxing-android-embedded:${zxing_version}"
+
+    // Tests implementation
+    // JUnit
+    testImplementation "junit:junit:${junit_version}"
+    androidTestImplementation "androidx.test.ext:junit:${junit_ext_version}"
+    // Runner
+    androidTestImplementation "androidx.test:runner:${runner_version}"
+    androidTestImplementation "androidx.test:rules:${runner_version}"
+    // Espresso
+    androidTestImplementation "androidx.test.espresso:espresso-core:${espresso_version}"
+    testImplementation "androidx.test.espresso:espresso-intents:${espresso_version}"
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+    // Mockk
+    testImplementation "io.mockk:mockk-android:${mockk_version}"
+    testImplementation "io.mockk:mockk-agent:${mockk_version}"
+    // Mockito
+    testImplementation "org.mockito:mockito-core:${mockito_version}"
+    androidTestImplementation "org.mockito:mockito-android:${mockito_version}"
+    testImplementation "org.mockito:mockito-inline:${mockito_version}"
 }
